force-app/main/default/objects/CanvasAPISettings__c/CanvasAPISettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Canvas API settings</label>
</CustomObject>