force-app/main/default/objects/CanvasAPISettings__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Account Id</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>