force-app/main/default/objects/CanvasAPISettings__c/fields/Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Base_Url__c</fullName>
    <defaultValue>&quot;https://ambition.instructure.com/api/v1/&quot;</defaultValue>
    <label>Base Url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>