force-app/main/default/objects/CanvasAPISettings__c/fields/NPQEL_Course_Section_Id__c.field-meta.xml
<CustomField>
    <fullName>NPQEL_Course_Section_Id__c</fullName>
    <externalId>true</externalId>
    <label>NPQEL Course Section Id</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>