force-app/main/default/objects/CanvasAPISettings__c/fields/NPQH_Course_Section_Id__c.field-meta.xml
<CustomField>
    <fullName>NPQH_Course_Section_Id__c</fullName>
    <externalId>true</externalId>
    <label>NPQH Course Section Id</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>