force-app/main/default/objects/CanvasAPISettings__c/fields/Participant_Role_Id__c.field-meta.xml
<CustomField>
    <fullName>Participant_Role_Id__c</fullName>
    <label>Participant Role Id</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>