force-app/main/default/objects/CanvasAPISettings__c/fields/Test_Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Test_Base_Url__c</fullName>
    <defaultValue>&quot;https://ambition.test.instructure.com/api/v1/&quot;</defaultValue>
    <label>Test Base Url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>