force-app/main/default/objects/CanvasAPISettings__c/fields/Test_Token__c.field-meta.xml
<CustomField>
    <fullName>Test_Token__c</fullName>
    <label>Test Token</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>